Add function to get all paths in a clubs image directory